Fixes layout issue when keyboard is open on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,3 +57,7 @@
         --ring: 212.7 26.8% 83.9;
     }
 }
+
+.keyboard-bottom {
+    bottom: env(keyboard-inset-height, 0px) !important;
+}
